added aria labels and accessibility for screen reader
